--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -27,10 +27,10 @@
 
 
             <TextView
-                android:id="@+id/loginText"
+                android:id="@+id/SignupText2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Login"
+                android:text="SignUp"
                 android:textAlignment="center"
                 android:textColor="@color/c2"
                 android:textSize="36sp"
@@ -80,8 +80,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:clickable="true"
         android:padding="8dp"
         android:text="Not Registered? SignUp Now"
         android:textSize="14sp"
