--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -122,6 +122,15 @@
                 android:text="Buy"
                 android:textSize="28sp"
                 android:layout_marginTop="30dp"
+                android:backgroundTint="@color/c12"
+                app:cornerRadius="20dp"/>
+            <Button
+                android:id="@+id/backButton1"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="Back"
+                android:textSize="28sp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
                 android:backgroundTint="@color/c12"
                 app:cornerRadius="20dp"/>
