--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -24,108 +24,54 @@
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
 
-        <TableLayout
-            android:layout_marginTop="20dp"
+        <LinearLayout
             android:layout_width="400dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:padding="24dp">
 
-            <TableRow
-                android:layout_width="400dp"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/Prod1Text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="1. Chips"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/c12"
-                    android:textSize="36sp"/>
-                <EditText
-                    android:id="@+id/number"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/g2"
-                    android:padding="8dp"
-                    android:hint="Amount"/>
-
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="400dp"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/Prod2Text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="2. Juice"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/c12"
-                    android:textSize="36sp" />
-
-                <EditText
-                    android:id="@+id/number2"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/g2"
-                    android:padding="8dp"
-                    android:hint="Amount"/>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="400dp"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/Prod3Text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="3. Tea"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/c12"
-                    android:textSize="36sp"/>
-                <EditText
-                    android:id="@+id/number3"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/g2"
-                    android:padding="8dp"
-                    android:hint="Amount"/>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="400dp"
-                android:layout_height="match_parent">
-                <TextView
-                    android:id="@+id/Prod4Text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="4. Chocolate"
-                    android:textAlignment="textStart"
-                    android:textColor="@color/c12"
-                    android:textSize="36sp"/>
-                <EditText
-                    android:id="@+id/number4"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:background="@drawable/g2"
-                    android:padding="8dp"
-                    android:hint="Amount"/>
-
-            </TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Report"
+                android:textSize="50sp"
+                android:textColor="@color/c12"
+                android:textStyle="bold"
+                android:textAlignment="center"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Due Amount: Rs 500"
+                android:textSize="36sp"
+                android:textColor="@color/c12"
+                android:textAlignment="textStart"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="From:   15/07/2023"
+                android:textSize="36sp"
+                android:textColor="@color/c12"
+                android:textAlignment="textStart"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="To:     15/08/2023"
+                android:textSize="36sp"
+                android:textColor="@color/c12"
+                android:textAlignment="textStart"/>
             <Button
+                android:id="@+id/backButton"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:id="@+id/AddButton"
-                android:text="Buy"
-                android:textSize="28sp"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="20dp"
+                android:layout_marginTop="40dp"
                 android:backgroundTint="@color/c12"
-                app:cornerRadius="20dp"/>
-        </TableLayout>
+                android:text="Back"
+                android:textSize="36sp"
+                app:cornerRadius="20dp" />
+        </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 
