--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -58,7 +58,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="40dp"
                 android:backgroundTint="@color/c8"
-                android:text="Buy"
+                android:text="View Dues"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
@@ -68,7 +68,7 @@
                 android:layout_height="60dp"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/c8"
-                android:text="Generate Report"
+                android:text="Add items"
                 android:textSize="18sp"
                 app:cornerRadius="20dp" />
 
